# dgpe-compiler

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: video.rs
src/: arch.rs  circuit.rs  clifford.rs  embed.rs  lib.rs  synth.rs  utils.rs
src/opt/: basic.rs  mod.rs
