[package]
name = "dgpe"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["tsrl <tsrl@mit.edu>"]

[dependencies]
disjoint = "0.8.0"
rand = "0.9"

[dependencies.quizx]
version = "0.3.0"
optional = true

[dependencies.petgraph]
git = "https://github.com/tlaakkonen/petgraph"
branch = "fixes"
default-features = false
features = ["std", "stable_graph"]

[dependencies.gf2-linalg]
default-features = false
git = "https://github.com/tlaakkonen/gf2-linalg"

[dependencies.mwmatching]
git = "https://github.com/ahenshaw/mwmatching"
rev = "47dba28b30b710232d7b2efa43b5a61e9c634d42"

[features]
default = ["quizx"]

[dev-dependencies]
image = "0.25.9"
video-rs = "0.10.5"
